--- a/app/assets/stylesheets/blocks/_header.sass
+++ b/app/assets/stylesheets/blocks/_header.sass
@@ -1,10 +1,28 @@
 $header-height: 3.125rem
+.header
+  background-color: $base-color
+  border-bottom: solid $background-color .0625rem
 .header__container
   display: flex
   justify-content: space-between
   align-items: center
   height: $header-height
 
+.header-links
+  height: 100%
 .header-links__items
   display: flex
-  justify-content: space-between
+  height: 100%
+.header-links__item
+  display: flex
+  height: 100%
+  border-left: solid $background-color .0625rem
+.header-links__link
+  +flex-link
+  +size(3.5rem 100%)
+  align-items: center
+  justify-content: center
+  +text-block(1.25rem 1, #b9b9b9)
+
+.header__title
+  color: $default-text
