--- a/app/assets/stylesheets/blocks/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/_recent-reports.sass
@@ -1,7 +1,7 @@
 .recent-reports
   +position(fixed, right 0, top 0, bottom 0)
   +size(14rem 100%)
-  background-color: $size
+  background-color: $side
   +overflow(hidden auto)
 
 .recent-reports-item__link
@@ -10,7 +10,7 @@
   padding: .5rem .75rem
   border-bottom: solid .0625rem $side-border
   &:hover
-    background-color: $side-tint
+    background-color: $side-shade
 .recent-reports-item__title
   +text-block(.875rem 1.45, 600)
 .recent-reports-item__date
