--- a/app/assets/stylesheets/blocks/_report-comment-form.sass
+++ b/app/assets/stylesheets/blocks/_report-comment-form.sass
@@ -13,11 +13,12 @@ $report-header-author: 7rem
   +size(100% auto)
   border-radius: 50%
 .report-comment-form__form
-  background-color: #cbcec3
+  background-color: #d9d9d9
   padding: 1rem
   border-radius: .25rem
   +relative
-  +balloon-tail(left #cbcec3 .75rem 1rem, false, top 1.5rem)
+  +balloon-tail(left #d9d9d9 .75rem 1rem, false, top 1.5rem)
+  box-shadow: rgba(black, .2) 0 .0625rem .125rem
 .report-comment-form__textarea
   margin-bottom: .75rem
 .report-comment-form__action
