--- a/app/assets/stylesheets/blocks/_report-comments.sass
+++ b/app/assets/stylesheets/blocks/_report-comments.sass
@@ -20,11 +20,12 @@ $report-header-author: 7rem
   +size(100% auto)
   border-radius: 50%
 .report-comment__body
-  background-color: #cbcec3
+  background-color: #d9d9d9
   +padding(horizontal, 1rem)
   border-radius: .25rem
   +relative
-  +balloon-tail(left #cbcec3 .75rem 1rem, false, top 1.5rem)
+  +balloon-tail(left #d9d9d9 .75rem 1rem, false, top 1.5rem)
+  box-shadow: rgba(black, .2) 0 .0625rem .125rem
 .report-comments__description
   border-bottom: solid .0625rem #a2a794
   +padding(vertical, 1rem)
