--- a/app/assets/stylesheets/blocks/_report.sass
+++ b/app/assets/stylesheets/blocks/_report.sass
@@ -6,6 +6,7 @@ $report-header-author: 7rem
   max-width: 52rem
   +margin(horizontal, auto)
   border-radius: .25rem
+  box-shadow: rgba(black, .2) 0 .0625rem .125rem
 
 .report__header
   padding-left: $report-header-author
