--- a/app/assets/stylesheets/blocks/_users.sass
+++ b/app/assets/stylesheets/blocks/_users.sass
@@ -5,6 +5,7 @@
   background-color: $base-color
   border-radius: .25rem
   height: 100%
+  box-shadow: rgba(black, .2) 0 .0625rem .125rem
 .users-item__header
   +position(relative)
   padding-left: 3.5rem
