--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -1,16 +1,18 @@
-$main-color: #f96b3b
+$main-color: #289fb0
 $accent-color: blue
 $base-color: white
-$background-color: #e2e5dc
+$background-color: #e6e6e6
+$background-color-shade: #cbcbcb
 
 $default-text: #464c4e
 $reversal-text: white
 $muted-text: #7b8386
 
-$size: #3f5256
-$side-border: #57696d
+$side: #273150
+$side-border: #3d4766
 $side-tint: #4e6165
-$side-shade: #202d30
+$side-shade: #091026
+$side-active: #e4b125
 
 $card-header: #819093
 
@@ -23,10 +25,16 @@ $gray-lightest: #f7f7f9
 $primary: #6b9bcd
 $success: #98c96c
 $info: #7ac3d3
-$warning: #f1d635
+$warning: #e4b125
 $danger: #dd6583
 
 $luma-contrast-bright-color: $default-text
 $luma-contrast-dark-color: $reversal-text
 $button-checked-color: $danger
 $button-checked-icon-color: $reversal-text
+
+$button-xs-height-ratio: 2.4 !default
+$button-sm-height-ratio: 2.2 !default
+$button-md-height-ratio: 2.85 !default
+$button-lg-height-ratio: 2.85 !default
+$button-xl-height-ratio: 2.85 !default
