--- a/app/assets/stylesheets/settings/variables/_sanitize.sass
+++ b/app/assets/stylesheets/settings/variables/_sanitize.sass
@@ -1,6 +1,3 @@
-$basic-sans-serif: 'Roboto', 'Noto Sans Japanese', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif
-$basic-bold-sans-serif: "ヒラギノ角ゴ StdN", "Hiragino Kaku Gothic StdN", "游ゴシック", YuGothic, "メイリオ", Meiryo, Roboto, "Droid Sans", "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", Helvetica, Arial, Verdana, sans-serif, "ＭＳ Ｐゴシック", Helvetica, Arial, Verdana, sans-serif
-
 $button-styles: border, flat-emboss, standard
 
 $small-column-horizontal-padding: 2rem
@@ -8,7 +5,7 @@ $xs-small-column-horizontal-padding: 1rem
 
 $grid-gutter-width: 1rem
 
-$root-font-family: $basic-sans-serif
+//$root-font-family: $basic-sans-serif
 
 $container-max-widths: (sm: 100%, md: 100%, lg: 100%, xl: 72.25rem)
 
