--- a/app/views/feeds/index.html.slim
+++ b/app/views/feeds/index.html.slim
@@ -2,7 +2,8 @@
   = auto_discovery_link_tag :atom, feeds_url(format: 'atom'), title: 'みんなのブログ'
 header.page-header
   .container
-    h1.page-header__title みんなのブログ
+    .page-header__container
+      h1.page-header__title みんなのブログ
 
 .page-body
   .container
