--- a/app/assets/stylesheets/settings/custom-bootstrap/_card.sass
+++ b/app/assets/stylesheets/settings/custom-bootstrap/_card.sass
@@ -57,19 +57,19 @@
 //
 
 .card-primary
-  +card-variant($brand-primary, $brand-primary)
+  +card-variant($primary, $primary)
 
 .card-success
-  +card-variant($brand-success, $brand-success)
+  +card-variant($success, $success)
 
 .card-info
-  +card-variant($brand-info, $brand-info)
+  +card-variant($info, $info)
 
 .card-warning
-  +card-variant($brand-warning, $brand-warning)
+  +card-variant($warning, $warning)
 
 .card-danger
-  +card-variant($brand-danger, $brand-danger)
+  +card-variant($danger, $danger)
 
 
 // Remove all backgrounds
