--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,10 +1,11 @@
 - title t('listing_users')
 - content_for :head_last do
   = auto_discovery_link_tag :atom, feeds_url(format: 'atom'), title: 'メンバー'
-header.page-header.is-margin-bottom-0
+header.page-header.is-margin-bottom-0.has-border-bottom-none
   .container
-    h2.page-header__title
-      = t('listing_users')
+    .page-header__container
+      h2.page-header__title
+        = t('listing_users')
 
 .page-body
   = render 'users_local_nav'
