--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -40,6 +40,7 @@
 @import base
 @import node_modules/highlight.js/styles/github
 @import github
+@import atoms/**/*
 @import blocks/**/*
 
 @import bootstrap/variables
