--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,4 +1,4 @@
-- content_for(:page_classes, 'no-header' 'no-footer')
+- content_for(:page_classes, 'no-header' 'no-footer' 'no-recent-reports' 'no-global-nav')
 
 .auth-form.is-sign-up
   header.auth-form__header
