--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,5 +1,6 @@
+- content_for(:page_classes, 'no-recent-reports' 'no-global-nav')
 section
-  header.page-header
+  header
     .container
       h2= t('how_256interns_works')
   .lead-text
@@ -50,10 +51,6 @@ section
         = link_to 'http://fjord.jp' do
           = image_tag '256intern_24.png'
           .name FJORD, LLC
-      .col-xs-12.col-sm-4.root
-        = link_to 'http://ic-root.com/' do
-          = image_tag '256intern_26.png'
-          .name root inc.
       .col-xs-12.col-sm-4.esm
         = link_to 'http://www.esm.co.jp' do
           = image_tag 'esm_logo.png'
