--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -1,5 +1,5 @@
-$main-color: #289fb0
-$accent-color: blue
+$main-color: #2c2461
+$accent-color: #e4b125
 $base-color: white
 $background-color: #e6e6e6
 $background-color-shade: #cbcbcb
@@ -8,11 +8,11 @@ $default-text: #464c4e
 $reversal-text: white
 $muted-text: #7b8386
 
-$side: #273150
+$side: $main-color
 $side-border: #3d4766
 $side-tint: #4e6165
 $side-shade: #091026
-$side-active: #e4b125
+$side-active: $accent-color
 
 $card-header: #819093
 
@@ -22,10 +22,10 @@ $gray-light: #818a91
 $gray-lighter: #eceeef
 $gray-lightest: #f7f7f9
 
-$primary: #6b9bcd
+$primary: #304ca2
 $success: #98c96c
 $info: #7ac3d3
-$warning: #e4b125
+$warning: #fabd17
 $danger: #dd6583
 
 $luma-contrast-bright-color: $default-text
