--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -39,6 +39,6 @@ nav.global-nav
         li.global-nav-links__item
           = link_to "/pages", class: "global-nav-links__link #{controller_name == 'pages' ? 'is-active' : ''}" do
             .global-nav-links__link-icon
-              i.fa.fa-rss
+              i.fa.fa-file-o
             .global-nav-links__link-label
               | wiki
