--- a/app/views/reports/edit.html.slim
+++ b/app/views/reports/edit.html.slim
@@ -2,8 +2,9 @@
 
 header.page-header
   .container
-    h2.page-header__title
-      = t('editing_report')
+    .page-header__container
+      h2.page-header__title
+        = t('editing_report')
 
 .page-body
   .container
