--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -16,6 +16,7 @@
 body
   height: 100vh
   +overflow(hidden scroll)
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
   .modal-open
     overflow: hidden
 
