--- a/app/views/reports/new.html.slim
+++ b/app/views/reports/new.html.slim
@@ -1,7 +1,8 @@
 header.page-header
   .container
-    h2.page-header__title
-      = t('new_report')
+    .page-header__container
+      h2.page-header__title
+        = t('new_report')
 
 .page-body
   .container
